--- a/src/components/ViewActivities/ViewActivities.module.css
+++ b/src/components/ViewActivities/ViewActivities.module.css
@@ -1,6 +1,6 @@
 .viewActivitiesContainer {
   width: 100%;
-  height: 150vh;
+  height: auto;
 }
 
 .swipe {
@@ -24,8 +24,7 @@
 }
 
 .interestedLink {
-  position: absolute;
-  bottom: 0;
+
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: 2px solid black;
